--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,27 @@ body{
     line-height: 34px;
 }
 
-header{
+header, 
+nav{
 background: #FD739C;
 color: white;
+font-family: Arial, Helvetica, sans-serif;
+
+}
+
+header{
+    padding: 100px 0 50px;
 }
 
 h1,
 h2{
-font-family: Arial, Helvetica, sans-serif; 
+font-family: Arial, Helvetica, sans-serif;
+margin-bottom: 10px;
 }
 
+h1{
+    line-height: 50px;
+}
+.section-whoiam {
+    margin-top: 50px;
+}
